# kohi

./: .gitignore  CMakeLists.txt  Readme.md
.github/workflows/: cmake.yml
assets/: CMakeLists.txt
assets/materials/: test_material.kmt
assets/shaders/: Builtin.MaterialShader.frag  Builtin.MaterialShader.vert.glsl  Builtin.ObjectShader.frag.glsl  Builtin.ObjectShader.vert.glsl  test.vert
engine/: CMakeLists.txt
engine/include/: defines.h  entry.h  game_types.h
engine/include/containers/: hashtable.h
engine/include/core/: event.h  input.h  kmemory.h  kstring.h  logger.h
engine/include/math/: kmath.h  math_types.h
engine/include/memory/: kmemory.h  linear_allocator.h
engine/include/platform/: filesystem.h  platform.h  platform_linux.inl
engine/include/renderer/: renderer_backend.h  renderer_frontend.h  renderer_types.inl
engine/include/renderer/vulkan_backend/: vulkan_backend.h  vulkan_buffer.h  vulkan_command_buffer.h  vulkan_fence.h  vulkan_framebuffer.h  vulkan_image.h  vulkan_pipeline.h  vulkan_platform.h  vulkan_shader_utils.h  vulkan_swapchain.h  vulkan_types.inl
engine/include/renderer/vulkan_backend/shaders/: vulkan_material_shader.h  vulkan_object_shader.h
engine/include/resources/: resource_types.h
engine/include/resources/loaders/: binary_loader.h  image_loader.h  material_loader.h
engine/include/systems/: geometry_system.h  material_system.h  resource_system.h  texture_system.h
engine/src/: CMakeLists.txt  defines.h  game_types.h  kohi_asserts.h  vulkan_test.cpp  vulkan_test.cxx  vulkan_test.h
engine/src/containers/: CMakeLists.txt  darray.c  darray.h  hashtable.c
engine/src/core/: CMakeLists.txt  application.c  application.cxx  application.h  asserts.h  clock.c  clock.h  event.c  input.c  input.h  kmemory.c  kstring.c  logger.c  logger.cxx  logger.h
engine/src/math/: CMakeLists.txt  kmath.c  kmath.h  math_types.h
engine/src/memory/: CMakeLists.txt  kmemory.c  linear_allocator.c
engine/src/platform/: CMakeLists.txt  filesystem.c  platform.h  platform_linux.c  platform_linux.cpp
engine/src/renderer/: CMakeLists.txt  renderer_backend.c  renderer_frontend.c
engine/src/renderer/vulkan_backend/: CMakeLists.txt  vulkan_backend.cpp  vulkan_buffer.cpp  vulkan_command_buffer.cpp  vulkan_device.cpp  vulkan_device.h  vulkan_fence.cpp  vulkan_framebuffer.cpp  vulkan_image.cpp  vulkan_image.h  vulkan_pipeline.cpp  vulkan_platform.h  vulkan_platform_linux.cpp  vulkan_renderpass.cpp  vulkan_renderpass.h  vulkan_shader_utils.cpp  vulkan_swapchain.cpp  vulkan_types.inl  vulkan_utils.cpp  vulkan_utils.h
engine/src/renderer/vulkan_backend/shaders/: CMakeLists.txt  vulkan_material_shader.cpp  vulkan_object_shader.cpp
engine/src/resources/loaders/: CMakeLists.txt  binary_loader.c  image_loader.c  material_loader.c
engine/src/systems/: CMakeLists.txt  geometry_system.c  material_system.c  resource_system.c  texture_system.c
testbed/: CMakeLists.txt
testbed/include/: game.h
testbed/src/: CMakeLists.txt  entry.c  game.c  main.cxx
tests/: CMakeLists.txt
tests/include/: expect.h
tests/src/: CMakeLists.txt  main.c  test_manager.c
tests/src/memory/: linear_allocator_test.c
